# adt.py

./: Makefile  README.md  pyproject.toml
adt/: compiler.py  lib.py  tree_gen.py
examples/: color.py  list.hs  list.py
tests/: test_parser.py
